# obelisk-browsersync

./: .envrc  .gitignore  default.nix  gulpfile.js  package.json
assets/: main.css
backend/: backend.cabal
backend/src/: Backend.hs
common/: common.cabal
common/src/Common/: Api.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
static/: all.css
